# hashsmith

./: .gitignore  CONTRIBUTING.md  README.md  pattern_example.py  pyproject.toml
.github/workflows/: sync-wiki.yml
docs/: README.md
docs/wiki/: Design-Rationale.md  Examples.md  Home.md  Operational-Semantics.md  Transforms.md  _Sidebar.md
scripts/: sync-wiki.py
src/hashsmith/: __init__.py
src/hashsmith/attacks/: __init__.py  dictionary_attack.py
src/hashsmith/core/: __init__.py  hashcat_runner.py  session_manager.py
src/hashsmith/patterns/: __init__.py  engine.py
tests/: test_patterns.py  test_patterns_comprehensive.py  test_transform.py  test_transform_behavior.py
